--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: cicd-jenkins-example
+- name: CiCdWithJenkins
   instances: 1
   memory: 800m
-  path: target/cicd-jenkins-example-0.0.1-SNAPSHOT.jar
+  path: target/PCFCiCdWithJenkins-0.0.1-SNAPSHOT.jar
