--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.1.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.techprimers.jenkins</groupId>
-	<artifactId>cicd-jenkins-example</artifactId>
+	<groupId>com.sudarshan.sud</groupId>
+	<artifactId>PCFCiCdWithJenkins</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cicd-jenkins-example</name>
+	<name>PCFCiCdWithJenkins</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
